# ico_math

./: Cargo.toml  README.md
src/: dual_quaternion.rs  float_vector.rs  int_vector.rs  lib.rs  matrix4x4.rs  physics.rs  quaternion.rs  raw.rs  sse_extensions.rs  structure.rs  vector2.rs  vector2_bool.rs  vector2_int.rs  vector3.rs  vector3_bool.rs  vector3_int.rs  vector4.rs  vector4_bool.rs  vector4_int.rs
src/dual_quaternion/: test.rs
src/quaternion/: test.rs
src/vector2/: test.rs  tests.rs
src/vector3/: test.rs  tests.rs
src/vector3_int/: test.rs
src/vector4/: test.rs  tests.rs
src/vector4_int/: test.rs
