[package]
name = "ico_math"
version = "0.1.6"
authors = ["Brian Kehrer <brian.kehrer@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/birdimus/ico_math"
description = "An opinionated SIMD Math Library for games and graphics in Rust."
keywords = ["math", "SIMD", "vector", "game", "quaternion"]
readme = "README.md"
categories = ["no-std", "science", "game-engines"]

[dependencies]


[lib]
name = "ico_math"
crate-type = ["lib"]

[profile.dev]
opt-level = 3
panic = "abort"

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"

[features]
use-std = []
default = ["use-std"]

